--- a/portfolio.html
+++ b/portfolio.html
@@ -28,9 +28,17 @@
         </ul>
       </nav>
       <ul class="kontakt-list">
-         <li class="link"><a href="mailto:info@devstudio.com" class="kontakt-mail">info@devstudio.com </a></li>
-         <li class="link"><a href="tel:+380961111111" class="kontakt-contact">+380961111111</a></li>
-       </ul>
+        <li class="link"><a href="mailto:info@devstudio.com" class="kontakt-mail"> <svg width="20"
+          viewBox="0 0 100 100" class="icon-kontakt-mail">
+          <use href="./imeges/symbol-defs 1.svg#icon-mail"></use>
+        </svg> info@devstudio.com </a></li>
+
+        <li class="link"><a href="tel:+380 96 111 11 11" class="kontakt-contact"><svg width="20"
+          viewBox="0 0 100 100" class="icon-kontakt-contact">
+          <use href="./imeges/symbol-defs 1.svg#icon-phone"></use>
+        </svg>
+          +380 961 111 11 11</a></li>
+      </ul>
       </div>
     </div>
 
@@ -57,7 +65,7 @@
       <div>
          <ul class="list-portfolio">
           <li class="list-portfolio-icon">
-            <a href="#"><img class="foto"  src="./imeges/img11.jpg"alt="Ноутбук"width="370"height="294">
+            <a href="#" class="link-portfolio"><img class="foto"  src="./imeges/img11.jpg"alt="Ноутбук"width="370"height="294">
               <div class="portfolio-icon-text">
             <h2 class="section-title">Технокряк</h2>
             <p class="section-text">Веб-сайт</p>
@@ -65,7 +73,7 @@
           </li>
 
           <li class="list-portfolio-icon">
-            <a href="#"
+            <a href="#" class="link-portfolio"
               ><img class="foto"
                 src="./imeges/img22.jpg"
                 alt="баскетболіст"
@@ -78,7 +86,7 @@
           </li>
 
           <li class="list-portfolio-icon">
-            <a href="#"
+            <a href="#" class="link-portfolio"
               ><img class="foto"
                 src="./imeges/img33.jpg"
                 alt="надпис"
@@ -92,7 +100,7 @@
           </li>
 
           <li class="list-portfolio-icon">
-            <a href="#"
+            <a href="#" class="link-portfolio"
               ><img class="foto"
                 src="./imeges/img44.jpg"
                 alt="наушники"
@@ -106,7 +114,7 @@
           </li>
 
           <li class="list-portfolio-icon">
-            <a href="#"
+            <a href="#" class="link-portfolio"
               ><img class="foto"
                 src="./imeges/img5.jpg"
                 alt="коробки"
@@ -120,7 +128,7 @@
           </li>
 
           <li class="list-portfolio-icon">
-            <a href="#"
+            <a href="#" class="link-portfolio"
               ><img class="foto"
                 src="./imeges/img6.jpg"
                 alt="екран"
@@ -134,7 +142,7 @@
           </li>
 
           <li class="list-portfolio-icon">
-            <a href="#"
+            <a href="#" class="link-portfolio"
               ><img class="foto"
                 src="./imeges/img7.jpg"
                 alt="журнал"
@@ -148,7 +156,7 @@
           </li>
 
           <li class="list-portfolio-icon">
-            <a href="#"
+            <a href="#" class="link-portfolio"
               ><img class="foto"
                 src="./imeges/img8.jpg"
                 alt="аксесуар"
@@ -162,7 +170,7 @@
           </li>
 
           <li class="list-portfolio-icon">
-            <a href="#"
+            <a href="#" class="link-portfolio"
               ><img class="foto"
                 src="./imeges/img9.jpg"
                 alt="клава набера"
@@ -178,10 +186,12 @@
        </div>
      </div>
     </section>
+        <!-- footer -->
     </main>
 
     <footer class="footer">
       <div class="conteiner conteiner-footer">
+        <div>
         <div class="logo-wraper">
           <a class="Logo logospan-footer" href="./index.html"><span class="logospan">Web</span>Studio</a>
         </div>
@@ -200,6 +210,28 @@
         </ul>
       </address>
     </div>
+
+    <div class="footer-sylky-blok">
+      <h1 class="title-footer-sylky">Приєднуйтесь</h1>
+      <ul class="footer-sylky list">
+        <li class="footer-spysok">
+          <a href="" class="list-Our-team"><svg width="20" viewBox="0 0 100 100" class="icon-Our-team">
+            <use  href="./imeges/symbol-defs 1.svg#icon-instagram"></use>
+          </svg></a>
+      </li>
+      <li class="Our-team-spysok"><a href="" class="list-Our-team"><svg width="20"  viewBox="0 0 100 100" class="icon-Our-team">
+            <use href="./imeges/symbol-defs 1.svg#icon-twitter"></use>
+          </svg></a></li>
+      <li class="Our-team-spysok"><a href="" class="list-Our-team fb"><svg width="23" height="23"   viewBox="0 0 100 100" class="icon-Our-team">
+            <use href="./imeges/symbol-defs 1.svg#icon-facebook"></use>
+          </svg></a></li>
+      <li class="Our-team-spysok"><a href="" class="list-Our-team"><svg width="20" viewBox="0 0 100 100" class="icon-Our-team">
+            <use href="./imeges/symbol-defs 1.svg#icon-linkedin"></use>
+          </svg></a></li>
+        </ul>
+      </div>
+    </div>
+
     </footer>
   </body>
 </html>
