dobavuv color #ffffff

--- a/index.html
+++ b/index.html
@@ -279,29 +279,29 @@
   <div class="conteiner">
     <h1 class="title-section-client">Постійні клієнти</h1>
     <ul class="list regular-client">
-      <li class="page-client"><a href="" class="List-compani"><svg width="75" height="75" 
+      <li class="page-client"><a href="" class="List-compani"><svg width="80" height="75" 
             class="icon-clients">
-            <use href="/imeges/symbol-defs 1.svg#icon-Logo-11"></use>
+            <use href="./imeges/symbol-defs.svg#icon-Logo-11"></use>
           </svg></a></li>
-      <li class="page-client"><a href="" class="List-compani"><svg width="70" height="60" 
+      <li class="page-client"><a href="" class="List-compani"><svg width="80" height="70" 
             width="41px" class="icon-clients">
-            <use href="/imeges/symbol-defs 1.svg#icon-Logo-22"></use>
+            <use href="./imeges/symbol-defs.svg#icon-Logo-22"></use>
           </svg></a></li>
       <li class="page-client"><a href="" class="List-compani"><svg width="80" height="80" 
             width="40" class="icon-clients">
-            <use href="/imeges/symbol-defs 1.svg#icon-Logo-33"></use>
+            <use href="./imeges/symbol-defs.svg#icon-Logo-33"></use>
           </svg></a></li>
-      <li class="page-client"><a href="" class="List-compani"><svg width="80" height="80" 
+      <li class="page-client"><a href="" class="List-compani"><svg width="80" height="90" 
              class="icon-clients">
-            <use href="/imeges/symbol-defs 1.svg#icon-Logo-44"></use>
+            <use href="./imeges/symbol-defs.svg#icon-Logo-44"></use>
           </svg></a></li>
-      <li class="page-client"><a href="" class="List-compani"><svg width="70" height="70" 
+      <li class="page-client"><a href="" class="List-compani"><svg width="80" height="90" 
             width="40" class="icon-clients">
-            <use href="/imeges/symbol-defs 1.svg#icon-Logo-55"></use>
+            <use href="./imeges/symbol-defs.svg#icon-Logo-55"></use>
           </svg></a></li>
-      <li class="page-client"><a href="" class="List-compani"><svg width="70" height="80" 
+      <li class="page-client"><a href="" class="List-compani"><svg width="80" height="90" 
             width="40" class="icon-clients">
-            <use href="/imeges/symbol-defs 1.svg#icon-Logo-66"></use>
+            <use href="./imeges/symbol-defs.svg#icon-Logo-66"></use>
           </svg></a></li>
     </ul>
   </div>
@@ -335,18 +335,16 @@
     <div class="footer-sylky-blok">
       <h1 class="title-footer-sylky">Приєднуйтесь</h1>
       <ul class="footer-sylky list">
-        <li class="footer-spysok">
-          <a href="" class="list-Our-team"><svg width="20" viewBox="0 0 100 100" class="icon-Our-team">
+      <li class="footer-spysok"><a href="" class="list-Our-team-footer"><svg width="20" viewBox="0 0 100 100" class="icon-Our-team">
             <use  href="./imeges/symbol-defs 1.svg#icon-instagram"></use>
-          </svg></a>
-      </li>
-      <li class="footer-spysok"><a href="" class="list-Our-team"><svg width="20"  viewBox="0 0 100 100" class="icon-Our-team">
+          </svg></a></li>
+      <li class="footer-spysok"><a href="" class="list-Our-team-footer"><svg width="20"  viewBox="0 0 100 100" class="icon-Our-team">
             <use href="./imeges/symbol-defs 1.svg#icon-twitter"></use>
           </svg></a></li>
-      <li class="footer-spysok"><a href="" class="list-Our-team fb"><svg width="23" height="23"   viewBox="0 0 100 100" class="icon-Our-team">
+      <li class="footer-spysok"><a href="" class="list-Our-team-footer"><svg width="23" viewBox="0 0 100 100" class="icon-Our-team">
             <use href="./imeges/symbol-defs 1.svg#icon-facebook"></use>
           </svg></a></li>
-      <li class="footer-spysok"><a href="" class="list-Our-team"><svg width="20" viewBox="0 0 100 100" class="icon-Our-team">
+      <li class="footer-spysok"><a href="" class="list-Our-team-footer"><svg width="20" viewBox="0 0 100 100" class="icon-Our-team">
             <use href="./imeges/symbol-defs 1.svg#icon-linkedin"></use>
           </svg></a></li>
         </ul>
