--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
         </ul>
       </nav>
       <ul class="kontakt-list">
-        <li class="link"><a href="mailto:info@devstudio.com" class="kontakt-mail"> <svg width="20"
-          viewBox="0 0 100 100" class="icon-kontakt-mail">
+        <li class="link"><a href="mailto:info@devstudio.com" class="kontakt-mail"> <svg width="16" height="12"
+           class="icon-kontakt-mail">
           <use href="./imeges/symbol-defs 1.svg#icon-mail"></use>
         </svg> info@devstudio.com </a></li>
 
-        <li class="link"><a href="tel:+380 96 111 11 11" class="kontakt-contact"><svg width="20"
-          viewBox="0 0 100 100" class="icon-kontakt-contact">
+        <li class="link"><a href="tel:+380 96 111 11 11" class="kontakt-contact"><svg width="10" height="16" 
+          class="icon-kontakt-contact">
           <use href="./imeges/symbol-defs 1.svg#icon-phone"></use>
         </svg>
           +380 961 111 11 11</a></li>
