--- a/portfolio.html
+++ b/portfolio.html
@@ -214,24 +214,21 @@
     <div class="footer-sylky-blok">
       <h1 class="title-footer-sylky">Приєднуйтесь</h1>
       <ul class="footer-sylky list">
-        <li class="footer-spysok">
-          <a href="" class="list-Our-team"><svg width="20" viewBox="0 0 100 100" class="icon-Our-team">
+      <li class="footer-spysok"><a href="" class="list-Our-team-footer"><svg width="20" viewBox="0 0 100 100" class="icon-Our-team">
             <use  href="./imeges/symbol-defs 1.svg#icon-instagram"></use>
-          </svg></a>
-      </li>
-      <li class="Our-team-spysok"><a href="" class="list-Our-team"><svg width="20"  viewBox="0 0 100 100" class="icon-Our-team">
+          </svg></a></li>
+      <li class="footer-spysok"><a href="" class="list-Our-team-footer"><svg width="20"  viewBox="0 0 100 100" class="icon-Our-team">
             <use href="./imeges/symbol-defs 1.svg#icon-twitter"></use>
           </svg></a></li>
-      <li class="Our-team-spysok"><a href="" class="list-Our-team fb"><svg width="23" height="23"   viewBox="0 0 100 100" class="icon-Our-team">
+      <li class="footer-spysok"><a href="" class="list-Our-team-footer"><svg width="23" viewBox="0 0 100 100" class="icon-Our-team">
             <use href="./imeges/symbol-defs 1.svg#icon-facebook"></use>
           </svg></a></li>
-      <li class="Our-team-spysok"><a href="" class="list-Our-team"><svg width="20" viewBox="0 0 100 100" class="icon-Our-team">
+      <li class="footer-spysok"><a href="" class="list-Our-team-footer"><svg width="20" viewBox="0 0 100 100" class="icon-Our-team">
             <use href="./imeges/symbol-defs 1.svg#icon-linkedin"></use>
           </svg></a></li>
         </ul>
       </div>
     </div>
-
     </footer>
   </body>
 </html>
